--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,19 @@
             </plugin>
         </plugins>
     </build>
-    <!--<dependencies>-->
-        <!--<dependency>-->
-            <!--<groupId>org.projectlombok</groupId>-->
-            <!--<artifactId>lombok</artifactId>-->
-            <!--<version>1.18.16</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-    <!--</dependencies>-->
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+      </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
